--- a/OSGi_Bundle_ContextManager/.project
+++ b/OSGi_Bundle_ContextManager/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ContextManager</name>
+	<name>OSGi_Bundle_ContextManager</name>
 	<comment></comment>
 	<projects>
 	</projects>
